# platform-manager

./: CHANGELOG.md  Makefile.am  NOTICE  configure.ac
.github/: CODEOWNERS
config/: RdkFwUpgradeManager.xml
source/: Makefile.am
source/FwUpgradeManager/: Makefile.am  deviceinfo_apis.c  deviceinfo_apis.h  ssp_action.c  ssp_global.h  ssp_internal.h  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h
source/TR-181/: Makefile.am
source/TR-181/middle_layer_src/: Makefile.am  fwupgrademgr_dml.c  fwupgrademgr_dml.h  plugin_main.c  plugin_main.h  plugin_main_apis.c  plugin_main_apis.h
